parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    BIT_AND
    BIT_NOT
    BIT_OR
    BIT_XOR
    CALLABLE
    CASE
    CATCH
    CLONE
    COLON
    COMMENT
    CONCATENATION
    CONTINUE
    DECLARE
    DEFAULT
    DIE
    DO
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    ERROR_CONTROL
    EVAL
    EXIT
    FINAL
    FINALLY
    FOR
    FOREACH
    GLOBAL
    GOTO
    HALT_COMPILER
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MATCH
    NAMESPACE
    REQUIRE
    REQUIRE_ONCE
    SHIF_LEFT
    SHIF_RIGHT
    STRING_CONCATENATION
    SWITCH
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> sentence program
Rule 2     program -> sentence
Rule 3     sentence -> print_statement SEMICOLON
Rule 4     sentence -> assignment SEMICOLON
Rule 5     sentence -> types_structure
Rule 6     sentence -> class_declaration
Rule 7     sentence -> control_structures
Rule 8     sentence -> function_declaration
Rule 9     control_structures -> if_statement
Rule 10    control_structures -> while_statement
Rule 11    while_statement -> WHILE LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
Rule 12    if_statement -> IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
Rule 13    if_statement -> IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE elseif_statement
Rule 14    if_statement -> IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE else_statement
Rule 15    elseif_statement -> ELSEIF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
Rule 16    elseif_statement -> ELSEIF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE elseif_statement
Rule 17    elseif_statement -> ELSEIF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE else_statement
Rule 18    else_statement -> ELSE LEFT_BRACE body_statement RIGHT_BRACE
Rule 19    body_statement -> sentence
Rule 20    body_statement -> sentence RETURN values SEMICOLON
Rule 21    body_statement -> sentence RETURN SEMICOLON
Rule 22    body_statement -> sentence BREAK SEMICOLON
Rule 23    body_statement -> sentence body_statement
Rule 24    conditional -> boolean_expression
Rule 25    conditional -> boolean_expression logic_operator boolean_expression
Rule 26    logic_operator -> LOGIC_AND
Rule 27    logic_operator -> LOGIC_OR
Rule 28    logic_operator -> LOGIC_XOR
Rule 29    boolean_expression -> comparation
Rule 30    boolean_expression -> LEFT_PAREN conditional RIGHT_PAREN
Rule 31    boolean_expression -> LOGIC_NOT conditional
Rule 32    comparation -> values comparator_operator values
Rule 33    comparation -> values comparator_operator expression
Rule 34    comparation -> expression comparator_operator expression
Rule 35    comparator_operator -> EQUALS_EQUALS
Rule 36    comparator_operator -> IDENTICAL
Rule 37    comparator_operator -> NOT_EQUALS
Rule 38    comparator_operator -> NOT_IDENTICAL
Rule 39    comparator_operator -> SMALL_THAN
Rule 40    comparator_operator -> GREATER_THAN
Rule 41    comparator_operator -> SMALL_EQUALS_TO
Rule 42    comparator_operator -> GREATER_EQUALS_TO
Rule 43    comparator_operator -> SPACECRAFT
Rule 44    comparator_operator -> NULL_FUSION
Rule 45    print_statement -> ECHO LEFT_PAREN printable_values RIGHT_PAREN
Rule 46    print_statement -> PRINT LEFT_PAREN printable_values RIGHT_PAREN
Rule 47    print_statement -> ECHO printable_values
Rule 48    print_statement -> PRINT printable_values
Rule 49    printable_values -> values
Rule 50    printable_values -> values COMMA printable_values
Rule 51    printable_values -> VARIABLE
Rule 52    printable_values -> VARIABLE COMMA printable_values
Rule 53    printable_values -> conditional
Rule 54    printable_values -> conditional COMMA printable_values
Rule 55    printable_values -> access_method_object
Rule 56    values -> INTEGER
Rule 57    values -> STRING
Rule 58    values -> FLOAT
Rule 59    values -> boolean
Rule 60    boolean -> TRUE
Rule 61    boolean -> FALSE
Rule 62    expression -> term
Rule 63    expression -> term PLUS expression
Rule 64    expression -> term MINUS expression
Rule 65    term -> factor
Rule 66    term -> factor MULTIPLY term
Rule 67    term -> factor DIVIDE term
Rule 68    term -> factor MODULE term
Rule 69    term -> factor POW term
Rule 70    factor -> INTEGER
Rule 71    factor -> VARIABLE
Rule 72    factor -> LEFT_PAREN expression RIGHT_PAREN
Rule 73    assignment -> variable_assignment
Rule 74    assignment -> constant_assignment
Rule 75    variable_assignment -> VARIABLE assignment_operator values
Rule 76    variable_assignment -> VARIABLE assignment_operator expression
Rule 77    variable_assignment -> VARIABLE assignment_operator function_invocation
Rule 78    variable_assignment -> VARIABLE assignment_operator types_structure
Rule 79    variable_assignment -> VARIABLE assignment_operator input
Rule 80    variable_assignment -> VARIABLE assignment_operator special_function
Rule 81    variable_assignment -> VARIABLE INCREASE
Rule 82    variable_assignment -> VARIABLE DECREMENT
Rule 83    variable_assignment -> INCREASE VARIABLE
Rule 84    variable_assignment -> DECREMENT VARIABLE
Rule 85    assignment_operator -> EQUALS
Rule 86    assignment_operator -> PLUS_EQUALS
Rule 87    constant_assignment -> const_syntax
Rule 88    constant_assignment -> define_syntax
Rule 89    const_syntax -> CONST IDENTIFIER EQUALS values
Rule 90    define_syntax -> DEFINE LEFT_PAREN STRING COMMA values RIGHT_PAREN
Rule 91    function_invocation -> IDENTIFIER LEFT_PAREN params RIGHT_PAREN SEMICOLON
Rule 92    params -> real_params
Rule 93    params -> empty
Rule 94    real_params -> VARIABLE
Rule 95    real_params -> values
Rule 96    real_params -> real_params COMMA VARIABLE
Rule 97    real_params -> real_params COMMA values
Rule 98    empty -> <empty>
Rule 99    function_declaration -> FUNCTION IDENTIFIER LEFT_PAREN params RIGHT_PAREN codeblock
Rule 100   special_function -> arrow_function
Rule 101   special_function -> anonymous_functions
Rule 102   arrow_function -> FN LEFT_PAREN params RIGHT_PAREN EQUALS GREATER_THAN codeblock
Rule 103   anonymous_functions -> FUNCTION LEFT_PAREN params RIGHT_PAREN codeblock
Rule 104   codeblock -> LEFT_BRACE body_statement RIGHT_BRACE
Rule 105   input -> FEGTS LEFT_PAREN STDIN RIGHT_PAREN
Rule 106   input -> READLINE LEFT_PAREN STRING RIGHT_PAREN
Rule 107   types_structure -> structure_array_principal
Rule 108   types_structure -> structure_matrix_principal
Rule 109   types_structure -> structure_object_principal
Rule 110   structure_array_principal -> indexed_array
Rule 111   structure_array_principal -> associative_array
Rule 112   indexed_array -> ARRAY LEFT_PAREN values_array_indexed RIGHT_PAREN
Rule 113   associative_array -> ARRAY LEFT_PAREN structure_array RIGHT_PAREN
Rule 114   associative_array -> ARRAY LEFT_BRACKET structure_array RIGHT_BRACKET
Rule 115   structure_array -> key EQUALS GREATER_THAN values
Rule 116   structure_array -> key EQUALS GREATER_THAN values COMMA structure_array
Rule 117   key -> INTEGER
Rule 118   key -> STRING
Rule 119   values_array_indexed -> values
Rule 120   values_array_indexed -> values COMMA values_array_indexed
Rule 121   structure_matrix_principal -> matrix_firstform
Rule 122   structure_matrix_principal -> matrix_secondform
Rule 123   structure_matrix_principal -> access_element_matrix
Rule 124   structure_matrix_principal -> modify_element_matrix
Rule 125   structure_matrix_principal -> add_element_matrix
Rule 126   matrix_firstform -> ARRAY LEFT_PAREN structure_matrix_first RIGHT_PAREN SEMICOLON
Rule 127   matrix_secondform -> LEFT_BRACKET structure_matrix_second RIGHT_BRACKET SEMICOLON
Rule 128   structure_matrix_second -> LEFT_BRACKET values RIGHT_BRACKET
Rule 129   structure_matrix_second -> LEFT_BRACKET values RIGHT_BRACKET COMMA structure_matrix_second
Rule 130   structure_matrix_first -> ARRAY LEFT_PAREN values RIGHT_PAREN
Rule 131   structure_matrix_first -> ARRAY LEFT_PAREN values RIGHT_PAREN COMMA structure_matrix_first
Rule 132   access_element_matrix -> VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET SEMICOLON
Rule 133   modify_element_matrix -> VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET EQUALS values SEMICOLON
Rule 134   add_element_matrix -> VARIABLE LEFT_BRACKET RIGHT_BRACKET EQUALS indexed_array
Rule 135   structure_object_principal -> object_creation
Rule 136   structure_object_principal -> access_method_object
Rule 137   object_creation -> NEW IDENTIFIER
Rule 138   object_creation -> NEW IDENTIFIER LEFT_PAREN params RIGHT_PAREN
Rule 139   access_method_object -> VARIABLE MINUS GREATER_THAN function_invocation
Rule 140   access_method_object -> VARIABLE MINUS GREATER_THAN IDENTIFIER SEMICOLON
Rule 141   access_method_object -> VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS values SEMICOLON
Rule 142   access_method_object -> VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS VARIABLE SEMICOLON
Rule 143   class_declaration -> CLASS IDENTIFIER class_extends_opt LEFT_BRACE class_body RIGHT_BRACE
Rule 144   class_extends_opt -> EXTENDS IDENTIFIER
Rule 145   class_extends_opt -> <empty>
Rule 146   class_body -> class_body class_member
Rule 147   class_body -> <empty>
Rule 148   class_member -> visibility_opt STATIC FUNCTION IDENTIFIER LEFT_PAREN params RIGHT_PAREN LEFT_BRACE method_body RIGHT_BRACE
Rule 149   class_member -> visibility_opt FUNCTION IDENTIFIER LEFT_PAREN params RIGHT_PAREN LEFT_BRACE method_body RIGHT_BRACE
Rule 150   class_member -> class_attribute
Rule 151   class_attribute -> visibility_opt VARIABLE EQUALS values SEMICOLON
Rule 152   class_attribute -> visibility_opt VARIABLE SEMICOLON
Rule 153   visibility_opt -> PUBLIC
Rule 154   visibility_opt -> PRIVATE
Rule 155   visibility_opt -> PROTECTED
Rule 156   visibility_opt -> <empty>
Rule 157   method_body -> classStatement
Rule 158   method_body -> classStatement return_form
Rule 159   method_body -> return_form
Rule 160   method_body -> classStatement BREAK SEMICOLON
Rule 161   method_body -> classStatement method_body
Rule 162   return_form -> RETURN values SEMICOLON
Rule 163   return_form -> RETURN access_method_object
Rule 164   return_form -> RETURN SEMICOLON
Rule 165   classStatement -> sentence
Rule 166   classStatement -> access_method_object

Terminals, with rules where they appear

ABSTRACT             : 
ARRAY                : 112 113 114 126 130 131
AS                   : 
BIT_AND              : 
BIT_NOT              : 
BIT_OR               : 
BIT_XOR              : 
BREAK                : 22 160
CALLABLE             : 
CASE                 : 
CATCH                : 
CLASS                : 143
CLONE                : 
COLON                : 
COMMA                : 50 52 54 90 96 97 116 120 129 131
COMMENT              : 
CONCATENATION        : 
CONST                : 89
CONTINUE             : 
DECLARE              : 
DECREMENT            : 82 84
DEFAULT              : 
DEFINE               : 90
DIE                  : 
DIVIDE               : 67
DO                   : 
ECHO                 : 45 47
ELSE                 : 18
ELSEIF               : 15 16 17
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUALS               : 85 89 102 115 116 133 134 141 142 151
EQUALS_EQUALS        : 35
ERROR_CONTROL        : 
EVAL                 : 
EXIT                 : 
EXTENDS              : 144
FALSE                : 61
FEGTS                : 105
FINAL                : 
FINALLY              : 
FLOAT                : 58
FN                   : 102
FOR                  : 
FOREACH              : 
FUNCTION             : 99 103 148 149
GLOBAL               : 
GOTO                 : 
GREATER_EQUALS_TO    : 42
GREATER_THAN         : 40 102 115 116 139 140 141 142
HALT_COMPILER        : 
IDENTICAL            : 36
IDENTIFIER           : 89 91 99 137 138 140 141 142 143 144 148 149
IF                   : 12 13 14
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INCREASE             : 81 83
INSTEADOF            : 
INTEGER              : 56 70 117 132 132 133 133
INTERFACE            : 
ISSET                : 
LEFT_BRACE           : 11 12 13 14 15 16 17 18 104 143 148 149
LEFT_BRACKET         : 114 127 128 129 132 132 133 133 134
LEFT_PAREN           : 11 12 13 14 15 16 17 30 45 46 72 90 91 99 102 103 105 106 112 113 126 130 131 138 148 149
LIST                 : 
LOGIC_AND            : 26
LOGIC_NOT            : 31
LOGIC_OR             : 27
LOGIC_XOR            : 28
MATCH                : 
MINUS                : 64 139 140 141 142
MODULE               : 68
MULTIPLY             : 66
NAMESPACE            : 
NEW                  : 137 138
NOT_EQUALS           : 37
NOT_IDENTICAL        : 38
NULL_FUSION          : 44
PLUS                 : 63
PLUS_EQUALS          : 86
POW                  : 69
PRINT                : 46 48
PRIVATE              : 154
PROTECTED            : 155
PUBLIC               : 153
READLINE             : 106
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 20 21 162 163 164
RIGHT_BRACE          : 11 12 13 14 15 16 17 18 104 143 148 149
RIGHT_BRACKET        : 114 127 128 129 132 132 133 133 134
RIGHT_PAREN          : 11 12 13 14 15 16 17 30 45 46 72 90 91 99 102 103 105 106 112 113 126 130 131 138 148 149
SEMICOLON            : 3 4 20 21 22 91 126 127 132 133 140 141 142 151 152 160 162 164
SHIF_LEFT            : 
SHIF_RIGHT           : 
SMALL_EQUALS_TO      : 41
SMALL_THAN           : 39
SPACECRAFT           : 43
STATIC               : 148
STDIN                : 105
STRING               : 57 90 106 118
STRING_CONCATENATION : 
SWITCH               : 
THROW                : 
TRAIT                : 
TRUE                 : 60
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VARIABLE             : 51 52 71 75 76 77 78 79 80 81 82 83 84 94 96 132 133 134 139 140 141 142 142 151 152
WHILE                : 11
YIELD                : 
error                : 

Nonterminals, with rules where they appear

access_element_matrix : 123
access_method_object : 55 136 163 166
add_element_matrix   : 125
anonymous_functions  : 101
arrow_function       : 100
assignment           : 4
assignment_operator  : 75 76 77 78 79 80
associative_array    : 111
body_statement       : 11 12 13 14 15 16 17 18 23 104
boolean              : 59
boolean_expression   : 24 25 25
classStatement       : 157 158 160 161
class_attribute      : 150
class_body           : 143 146
class_declaration    : 6
class_extends_opt    : 143
class_member         : 146
codeblock            : 99 102 103
comparation          : 29
comparator_operator  : 32 33 34
conditional          : 11 12 13 14 15 16 17 30 31 53 54
const_syntax         : 87
constant_assignment  : 74
control_structures   : 7
define_syntax        : 88
else_statement       : 14 17
elseif_statement     : 13 16
empty                : 93
expression           : 33 34 34 63 64 72 76
factor               : 65 66 67 68 69
function_declaration : 8
function_invocation  : 77 139
if_statement         : 9
indexed_array        : 110 134
input                : 79
key                  : 115 116
logic_operator       : 25
matrix_firstform     : 121
matrix_secondform    : 122
method_body          : 148 149 161
modify_element_matrix : 124
object_creation      : 135
params               : 91 99 102 103 138 148 149
print_statement      : 3
printable_values     : 45 46 47 48 50 52 54
program              : 1 0
real_params          : 92 96 97
return_form          : 158 159
sentence             : 1 2 19 20 21 22 23 165
special_function     : 80
structure_array      : 113 114 116
structure_array_principal : 107
structure_matrix_first : 126 131
structure_matrix_principal : 108
structure_matrix_second : 127 129
structure_object_principal : 109
term                 : 62 63 64 66 67 68 69
types_structure      : 5 78
values               : 20 32 32 33 49 50 75 89 90 95 97 115 116 119 120 128 129 130 131 133 141 151 162
values_array_indexed : 112 120
variable_assignment  : 73
visibility_opt       : 148 149 151 152
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . sentence program
    (2) program -> . sentence
    (3) sentence -> . print_statement SEMICOLON
    (4) sentence -> . assignment SEMICOLON
    (5) sentence -> . types_structure
    (6) sentence -> . class_declaration
    (7) sentence -> . control_structures
    (8) sentence -> . function_declaration
    (45) print_statement -> . ECHO LEFT_PAREN printable_values RIGHT_PAREN
    (46) print_statement -> . PRINT LEFT_PAREN printable_values RIGHT_PAREN
    (47) print_statement -> . ECHO printable_values
    (48) print_statement -> . PRINT printable_values
    (73) assignment -> . variable_assignment
    (74) assignment -> . constant_assignment
    (107) types_structure -> . structure_array_principal
    (108) types_structure -> . structure_matrix_principal
    (109) types_structure -> . structure_object_principal
    (143) class_declaration -> . CLASS IDENTIFIER class_extends_opt LEFT_BRACE class_body RIGHT_BRACE
    (9) control_structures -> . if_statement
    (10) control_structures -> . while_statement
    (99) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN params RIGHT_PAREN codeblock
    (75) variable_assignment -> . VARIABLE assignment_operator values
    (76) variable_assignment -> . VARIABLE assignment_operator expression
    (77) variable_assignment -> . VARIABLE assignment_operator function_invocation
    (78) variable_assignment -> . VARIABLE assignment_operator types_structure
    (79) variable_assignment -> . VARIABLE assignment_operator input
    (80) variable_assignment -> . VARIABLE assignment_operator special_function
    (81) variable_assignment -> . VARIABLE INCREASE
    (82) variable_assignment -> . VARIABLE DECREMENT
    (83) variable_assignment -> . INCREASE VARIABLE
    (84) variable_assignment -> . DECREMENT VARIABLE
    (87) constant_assignment -> . const_syntax
    (88) constant_assignment -> . define_syntax
    (110) structure_array_principal -> . indexed_array
    (111) structure_array_principal -> . associative_array
    (121) structure_matrix_principal -> . matrix_firstform
    (122) structure_matrix_principal -> . matrix_secondform
    (123) structure_matrix_principal -> . access_element_matrix
    (124) structure_matrix_principal -> . modify_element_matrix
    (125) structure_matrix_principal -> . add_element_matrix
    (135) structure_object_principal -> . object_creation
    (136) structure_object_principal -> . access_method_object
    (12) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
    (13) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE elseif_statement
    (14) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE else_statement
    (11) while_statement -> . WHILE LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
    (89) const_syntax -> . CONST IDENTIFIER EQUALS values
    (90) define_syntax -> . DEFINE LEFT_PAREN STRING COMMA values RIGHT_PAREN
    (112) indexed_array -> . ARRAY LEFT_PAREN values_array_indexed RIGHT_PAREN
    (113) associative_array -> . ARRAY LEFT_PAREN structure_array RIGHT_PAREN
    (114) associative_array -> . ARRAY LEFT_BRACKET structure_array RIGHT_BRACKET
    (126) matrix_firstform -> . ARRAY LEFT_PAREN structure_matrix_first RIGHT_PAREN SEMICOLON
    (127) matrix_secondform -> . LEFT_BRACKET structure_matrix_second RIGHT_BRACKET SEMICOLON
    (132) access_element_matrix -> . VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET SEMICOLON
    (133) modify_element_matrix -> . VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET EQUALS values SEMICOLON
    (134) add_element_matrix -> . VARIABLE LEFT_BRACKET RIGHT_BRACKET EQUALS indexed_array
    (137) object_creation -> . NEW IDENTIFIER
    (138) object_creation -> . NEW IDENTIFIER LEFT_PAREN params RIGHT_PAREN
    (139) access_method_object -> . VARIABLE MINUS GREATER_THAN function_invocation
    (140) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER SEMICOLON
    (141) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS values SEMICOLON
    (142) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS VARIABLE SEMICOLON

    ECHO            shift and go to state 9
    PRINT           shift and go to state 10
    CLASS           shift and go to state 16
    FUNCTION        shift and go to state 19
    VARIABLE        shift and go to state 20
    INCREASE        shift and go to state 21
    DECREMENT       shift and go to state 22
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    CONST           shift and go to state 36
    DEFINE          shift and go to state 37
    ARRAY           shift and go to state 38
    LEFT_BRACKET    shift and go to state 39
    NEW             shift and go to state 40

    program                        shift and go to state 1
    sentence                       shift and go to state 2
    print_statement                shift and go to state 3
    assignment                     shift and go to state 4
    types_structure                shift and go to state 5
    class_declaration              shift and go to state 6
    control_structures             shift and go to state 7
    function_declaration           shift and go to state 8
    variable_assignment            shift and go to state 11
    constant_assignment            shift and go to state 12
    structure_array_principal      shift and go to state 13
    structure_matrix_principal     shift and go to state 14
    structure_object_principal     shift and go to state 15
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    const_syntax                   shift and go to state 23
    define_syntax                  shift and go to state 24
    indexed_array                  shift and go to state 25
    associative_array              shift and go to state 26
    matrix_firstform               shift and go to state 27
    matrix_secondform              shift and go to state 28
    access_element_matrix          shift and go to state 29
    modify_element_matrix          shift and go to state 30
    add_element_matrix             shift and go to state 31
    object_creation                shift and go to state 32
    access_method_object           shift and go to state 33

state 1

    (0) S' -> program .



state 2

    (1) program -> sentence . program
    (2) program -> sentence .
    (1) program -> . sentence program
    (2) program -> . sentence
    (3) sentence -> . print_statement SEMICOLON
    (4) sentence -> . assignment SEMICOLON
    (5) sentence -> . types_structure
    (6) sentence -> . class_declaration
    (7) sentence -> . control_structures
    (8) sentence -> . function_declaration
    (45) print_statement -> . ECHO LEFT_PAREN printable_values RIGHT_PAREN
    (46) print_statement -> . PRINT LEFT_PAREN printable_values RIGHT_PAREN
    (47) print_statement -> . ECHO printable_values
    (48) print_statement -> . PRINT printable_values
    (73) assignment -> . variable_assignment
    (74) assignment -> . constant_assignment
    (107) types_structure -> . structure_array_principal
    (108) types_structure -> . structure_matrix_principal
    (109) types_structure -> . structure_object_principal
    (143) class_declaration -> . CLASS IDENTIFIER class_extends_opt LEFT_BRACE class_body RIGHT_BRACE
    (9) control_structures -> . if_statement
    (10) control_structures -> . while_statement
    (99) function_declaration -> . FUNCTION IDENTIFIER LEFT_PAREN params RIGHT_PAREN codeblock
    (75) variable_assignment -> . VARIABLE assignment_operator values
    (76) variable_assignment -> . VARIABLE assignment_operator expression
    (77) variable_assignment -> . VARIABLE assignment_operator function_invocation
    (78) variable_assignment -> . VARIABLE assignment_operator types_structure
    (79) variable_assignment -> . VARIABLE assignment_operator input
    (80) variable_assignment -> . VARIABLE assignment_operator special_function
    (81) variable_assignment -> . VARIABLE INCREASE
    (82) variable_assignment -> . VARIABLE DECREMENT
    (83) variable_assignment -> . INCREASE VARIABLE
    (84) variable_assignment -> . DECREMENT VARIABLE
    (87) constant_assignment -> . const_syntax
    (88) constant_assignment -> . define_syntax
    (110) structure_array_principal -> . indexed_array
    (111) structure_array_principal -> . associative_array
    (121) structure_matrix_principal -> . matrix_firstform
    (122) structure_matrix_principal -> . matrix_secondform
    (123) structure_matrix_principal -> . access_element_matrix
    (124) structure_matrix_principal -> . modify_element_matrix
    (125) structure_matrix_principal -> . add_element_matrix
    (135) structure_object_principal -> . object_creation
    (136) structure_object_principal -> . access_method_object
    (12) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
    (13) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE elseif_statement
    (14) if_statement -> . IF LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE else_statement
    (11) while_statement -> . WHILE LEFT_PAREN conditional RIGHT_PAREN LEFT_BRACE body_statement RIGHT_BRACE
    (89) const_syntax -> . CONST IDENTIFIER EQUALS values
    (90) define_syntax -> . DEFINE LEFT_PAREN STRING COMMA values RIGHT_PAREN
    (112) indexed_array -> . ARRAY LEFT_PAREN values_array_indexed RIGHT_PAREN
    (113) associative_array -> . ARRAY LEFT_PAREN structure_array RIGHT_PAREN
    (114) associative_array -> . ARRAY LEFT_BRACKET structure_array RIGHT_BRACKET
    (126) matrix_firstform -> . ARRAY LEFT_PAREN structure_matrix_first RIGHT_PAREN SEMICOLON
    (127) matrix_secondform -> . LEFT_BRACKET structure_matrix_second RIGHT_BRACKET SEMICOLON
    (132) access_element_matrix -> . VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET SEMICOLON
    (133) modify_element_matrix -> . VARIABLE LEFT_BRACKET INTEGER RIGHT_BRACKET LEFT_BRACKET INTEGER RIGHT_BRACKET EQUALS values SEMICOLON
    (134) add_element_matrix -> . VARIABLE LEFT_BRACKET RIGHT_BRACKET EQUALS indexed_array
    (137) object_creation -> . NEW IDENTIFIER
    (138) object_creation -> . NEW IDENTIFIER LEFT_PAREN params RIGHT_PAREN
    (139) access_method_object -> . VARIABLE MINUS GREATER_THAN function_invocation
    (140) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER SEMICOLON
    (141) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS values SEMICOLON
    (142) access_method_object -> . VARIABLE MINUS GREATER_THAN IDENTIFIER EQUALS VARIABLE SEMICOLON

    $end            reduce using rule 2 (program -> sentence .)
    ECHO            shift and go to state 9
    PRINT           shift and go to state 10
    CLASS           shift and go to state 16
    FUNCTION        shift and go to state 19
    VARIABLE        shift and go to state 20
    INCREASE        shift and go to state 21
    DECREMENT       shift and go to state 22
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    CONST           shift and go to state 36
    DEFINE          shift and go to state 37
    ARRAY           shift and go to state 38
    LEFT_BRACKET    shift and go to state 39
    NEW             shift and go to state 40

    sentence                       shift and go to state 2
    program                        shift and go to state 41
    print_statement                shift and go to state 3
    assignment                     shift and go to state 4
    types_structure                shift and go to state 5
    class_declaration              shift and go to state 6
    control_structures             shift and go to state 7
    function_declaration           shift and go to state 8
    variable_assignment            shift and go to state 11
    constant_assignment            shift and go to state 12
    structure_array_principal      shift and go to state 13
    structure_matrix_principal     shift and go to state 14
    structure_object_principal     shift and go to state 15
    if_statement                   shift and go to state 17
    while_statement                shift and go to state 18
    const_syntax                   shift and go to state 23
    define_syntax                  shift and go to state 24
    indexed_array                  shift and go to state 25
    associative_array              shift and go to state 26
    matrix_firstform               shift and go to state 27
    matrix_secondform              shift and go to state 28
    access_element_matrix          shift and go to state 29
    modify_element_matrix          shift and go to state 30
    add_element_matrix             shift and go to state 31
    object_creation                shift and go to state 32
    access_method_object           shift and go to state 33

state 3

    (3) sentence -> print_statement . SEMICOLON

    SEMICOLON       shift and go to state 42


state 4

    (4) sentence -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 43


state 5

    (5) sentence -> types_structure .

    ECHO            reduce using rule 5 (sentence -> types_structure .)
    PRINT           reduce using rule 5 (sentence -> types_structure .)
    CLASS           reduce using rule 5 (sentence -> types_structure .)
    FUNCTION        reduce using rule 5 (sentence -> types_structure .)
    VARIABLE        reduce using rule 5 (sentence -> types_structure .)
    INCREASE        reduce using rule 5 (sentence -> types_structure .)
    DECREMENT       reduce using rule 5 (sentence -> types_structure .)
    IF              reduce using rule 5 (sentence -> types_structure .)
    WHILE           reduce using rule 5 (sentence -> types_structure .)
    CONST           reduce using rule 5 (sentence -> types_structure .)
    DEFINE          reduce using rule 5 (sentence -> types_structure .)
    ARRAY           reduce using rule 5 (sentence -> types_structure .)
    LEFT_BRACKET    reduce using rule 5 (sentence -> types_structure .)
    NEW             reduce using rule 5 (sentence -> types_structure .)
    $end            reduce using rule 5 (sentence -> types_structure .)
    RETURN          reduce using rule 5 (sentence -> types_structure .)
    BREAK           reduce using rule 5 (sentence -> types_structure .)
    RIGHT_BRACE     reduce using rule 5 (sentence -> types_structure .)


state 6

    (6) sentence -> class_declaration .

    ECHO            reduce using rule 6 (sentence -> class_declaration .)
    PRINT           reduce using rule 6 (sentence -> class_declaration .)
    CLASS           reduce using rule 6 (sentence -> class_declaration .)
    FUNCTION        reduce using rule 6 (sentence -> class_declaration .)
    VARIABLE        reduce using rule 6 (sentence -> class_declaration .)
    INCREASE        reduce using rule 6 (sentence -> class_declaration .)
    DECREMENT       reduce using rule 6 (sentence -> class_declaration .)
    IF              reduce using rule 6 (sentence -> class_declaration .)
    WHILE           reduce using rule 6 (sentence -> class_declaration .)
    CONST           reduce using rule 6 (sentence -> class_declaration .)
    DEFINE          reduce using rule 6 (sentence -> class_declaration .)
    ARRAY           reduce using rule 6 (sentence -> class_declaration .)
    LEFT_BRACKET    reduce using rule 6 (sentence -> class_declaration .)
    NEW             reduce using rule 6 (sentence -> class_declaration .)
    $end            reduce using rule 6 (sentence -> class_declaration .)
    RETURN          reduce using rule 6 (sentence -> class_declaration .)
    BREAK           reduce using rule 6 (sentence -> class_declaration .)
    RIGHT_BRACE     reduce using rule 6 (sentence -> class_declaration .)


state 7

    (7) sentence -> control_structures .

    ECHO            reduce using rule 7 (sentence -> control_structures .)
    PRINT           reduce using rule 7 (sentence -> control_structures .)
    CLASS           reduce using rule 7 (sentence -> control_structures .)
    FUNCTION        reduce using rule 7 (sentence -> control_structures .)
    VARIABLE        reduce using rule 7 (sentence -> control_structures .)
    INCREASE        reduce using rule 7 (sentence -> control_structures .)
    DECREMENT       reduce using rule 7 (sentence -> control_structures .)
    IF              reduce using rule 7 (sentence -> control_structures .)
    WHILE           reduce using rule 7 (sentence -> control_structures .)
    CONST           reduce using rule 7 (sentence -> control_structures .)
    DEFINE          reduce using rule 7 (sentence -> control_structures .)
    ARRAY           reduce using rule 7 (sentence -> control_structures .)
    LEFT_BRACKET    reduce using rule 7 (sentence -> control_structures .)
    NEW             reduce using rule 7 (sentence -> control_structures .)
    $end            reduce using rule 7 (sentence -> control_structures .)
    RETURN          reduce using rule 7 (sentence -> control_structures .)
    BREAK           reduce using rule 7 (sentence -> control_structures .)
    RIGHT_BRACE     reduce using rule 7 (sentence -> control_structures .)


state 8

    (8) sentence -> function_declaration .
